refactor(ProcessUtils): ♻️ 重构工具类，拆分业务逻辑到各服务类
将ProcessUtils中的业务逻辑拆分为四个服务类：
1. ServiceInstallationService - 处理服务安装相关逻辑
2. CommandExecutionService - 处理命令执行管理
3. ClusterVariableManagementService - 处理集群变量管理
4. ServiceStateManagementService - 处理服务状态管理

同时更新了相关的DTO转换和实现类结构。

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>